# electron-vue-template

./: .gitignore  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PLUGIN_ENHANCEMENT_PLAN.md  PLUGIN_SYSTEM_REFACTOR.md  SETTINGS_AND_EDITOR_IMPLEMENTATION.md  index.html  package.json  tsconfig.json  vite.config.ts
debugger/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  INDEX.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SUMMARY.md  build.ps1
debugger/examples/: advanced_stdexec.cpp  basic_usage.cpp  subitem_management.cpp
debugger/include/debugger/: debugger.hpp  message.hpp  subscriber.hpp
debugger/src/: debugger.cpp  message.cpp  subscriber.cpp
docs/: AUTO_LAYOUT.md  CLI_SUMMARY.md  CLI_TOOL.md  COLLAPSIBLE_PANEL_SYSTEM.md  EDGE_DISPLAY_FIX.md  GRAPH_SOCKET_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INFINITE_LOOP_FIX.md  MIGRATION_COMPLETE.md  PANEL_ANIMATION.md  PANEL_RESIZE_FIX.md  PANEL_SYSTEM_QUICKSTART.md  PLUGIN_MIGRATION.md  PLUGIN_QUICK_START.md  PLUGIN_SYSTEM.md  QUICK_START.md  README_PLUGIN_REFACTORING.md  REFACTORING_SUMMARY.md  RERENDER_FIX.md  SIDEBAR_COMPLETE.md  SIDEBAR_ENHANCEMENTS.md  SIDEBAR_FIX.md  SIDEBAR_RESIZABLE.md  SOCKET_FIX.md  SOCKET_SYSTEM.md  TESTING_GUIDE.md  TOOLTIP_FEATURE.md  TOOLTIP_SIDEBAR_FIX.md  TOOLTIP_SIDEBAR_IMPROVEMENTS.md  TROUBLESHOOTING.md  TYPE_SYSTEM.md  UPDATES.md  UPDATE_TYPE_SYSTEM.md  VSCODE_LAYOUT_IMPLEMENTATION.md  packages.md
electron/: config.ts  main.ts  preload.ts
electron/ipc/: index.ts
electron/ipc/handlers/: app.ts  socket.ts
electron/services/: logger.ts
electron/windows/: mainWindow.ts  windowManger.ts
ref2/components/editor/: MonacoEditor.vue
ref2/components/layout/: Sidebar.vue  StatusBar.vue  TitleBar.vue
ref2/components/panels/: Backlinks.vue  DocTree.vue  GraphElementsPanel.vue  Outline.vue
ref2/components/views/: EditorView.vue  GraphView.vue
ref2/core/plugin/: CommandRegistry.ts  PluginDiscovery.ts  PluginManager.ts  PluginManifest.ts
ref2/plugins/: DocumentPlugin.ts  Model3DPlugin.ts  SettingsPlugin.ts
src/: App.vue  index.html  main.ts  vite-env.d.ts
src/components/common/: CollapsiblePanel.vue  CommandPalette.vue  ResizablePanelGroup.vue  TestComponent.vue
src/core/plugin/: index.ts  (+7 more)
src/plugins/: EditorCodePlugin.ts  EditorPlugin.ts  GraphPlugin.ts  index.ts  initializePluginsV2.ts
src/utils/: commandExecutor.ts
src2/: App.vue  vite-env.d.ts
test/: CLI_QUICK_REF.txt  socket-cli-simple.js  socket-cli.js  socket-client-test.js  socket-debug-test.js  socket-large-test.js  socket-simple-test.js
(+41 files in other folders)
